--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -2,7 +2,7 @@ html {
     box-sizing: border-box;
     font-size: 16px;
     height: 100%;
-    background-color: lightcoral;
+    background-color: lightgray;
 }
   
 *,
